--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,17 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.23",
         "laravel/framework": "^10.10",
+        "laravel/prompts": "^0.1.22",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "phpmailer/phpmailer": "^6.8"
@@ -61,6 +65,9 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
+        },
+        "platform": {
+            "php": "8.3.0"
         }
     },
     "minimum-stability": "stable",
